<resources>
    <string name="app_name">Foody</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title_welcome_fragment">Trendy Taste\nTrendy You</string>
    <string name="main_button_welcome_fragment">Get Started</string>
    <string name="second_title_welcome_fragment">What\'s your favorite food?</string>
    <string name="main_title_login_fragment">Welcome Back</string>
    <string name="email_title_login_fragment">Email</string>
    <string name="edit_text_email_login_fragment">Your Email Here</string>
    <string name="pass_title_login_fragment">Password</string>
    <string name="edit_text_pass_login_fragment">Your Password Here</string>
    <string name="main_button_login_fragment">Login</string>
    <string name="login_signup_title_login_fragment">Don\'t Have An Account?</string>
    <string name="login_signup_login_fragment">Signup</string>
    <string name="main_title_registration_fragment">Let\'s Get Start</string>
    <string name="name_title_registration_fragment">Name</string>
    <string name="edit_text_name_registration_fragment">Your name here</string>
    <string name="email_title_registration_fragment">Email</string>
    <string name="edit_text_email_registration_fragment">Your email here</string>
    <string name="pass_title_registration_fragment">Password</string>
    <string name="edit_text_pass_registration_fragment">Your password here</string>
    <string name="verification_pass_title_registration_fragment">Verification password</string>
    <string name="verification_edit_text_pass_registration_fragment">Confirm your password</string>
    <string name="accept_termes_title_registration_fragment"><![CDATA[I accept the terms & condition]]></string>
    <string name="main_button_registration_fragment">SignUp</string>
    <string name="login_title_registration_fragment">Already Have An Account?</string>
    <string name="login_registration_fragment">Login</string>
    <string name="bottom_navigation_item_1">Dashboard</string>
    <string name="bottom_navigation_item_2">List</string>
    <string name="bottom_navigation_item_3">Favorites</string>
    <string name="bottom_navigation_item_4">Setting</string>
    <string name="filtre_by_category_dashboard_fragment">Short by:</string>
    <string name="sort_by_favorite_fragment">Sort by:</string>
    <string name="title_favorite_fragment">Favorites</string>
    <string name="ingredient_details_fragment">Ingredient</string>
    <string name="empty"> </string>
    <string name="empty_text">empty</string>
    <string name="main_title_account_fragment">Account info</string>
    <string name="main_button_account_fragment">Logout</string>
    <string name="name_title_account_fragment">Name</string>
    <string name="email_title_account_fragment">Email</string>






    <!-- Error message -->
    <string name="name_error">Please enter a name</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="password_error">Please enter a valid password</string>
    <string name="password_error_regex">At least 5 characters</string>
    <string name="verification_password_error">Please enter confirm password</string>
    <string name="verification_password_not_match_error">Password is not matching</string>
    <string name="checkBox_error">You should accept all the terms</string>
    <string name="email_exist_error">Email already exist</string>
    <string name="user_mail_pass_error">Invalid username or password</string>
    <string name="retrofit_error">Something went wrong</string>


</resources>