<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registrationViewModel"
            type="com.foody.foody.ui.registration.RegistrationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="16dp"
                android:src="@drawable/main_image_registration_fragment"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    android:id="@+id/textView"
                    style="@style/main_title_login_registration_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_title_registration_fragment" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_edit_login_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_title_registration_fragment" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/text_edit_login_registration_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_name_registration_fragment"
                        app:errorText="@{registrationViewModel.liveErrorUser.nameError}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_name_registration_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@={registrationViewModel.liveUser.name}" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_edit_login_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title_registration_fragment" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/text_edit_login_registration_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_email_registration_fragment"
                        app:errorText="@{registrationViewModel.liveErrorUser.emailError}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_email_registration_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:text="@={registrationViewModel.liveUser.email}">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_edit_login_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pass_title_registration_fragment" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/text_edit_login_registration_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_pass_registration_fragment"
                        app:errorText="@{registrationViewModel.liveErrorUser.passwordError}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_pass_registration_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@={registrationViewModel.liveUser.password}" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_edit_login_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/verification_pass_title_registration_fragment" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/text_edit_login_registration_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/verification_edit_text_pass_registration_fragment"

                        app:errorText="@{registrationViewModel.liveErrorUser.confirmPasswordError}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_verification_pass_registration_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <CheckBox
                    android:id="@+id/checkBox_registration_fragment"
                    style="@style/checkBox_registration_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={registrationViewModel.isChecked}"
                    android:text="@string/accept_termes_title_registration_fragment"
                    app:errorText="@{registrationViewModel.liveErrorUser.checkBoxError}" />

                <Button
                    android:id="@+id/main_button_registration_fragment"
                    style="@style/main_button_login_registration_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_button_registration_fragment" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/secondary_title_login_registration_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_title_registration_fragment" />

                    <TextView
                        android:id="@+id/login_text_registration_fragment"
                        style="@style/third_title_login_registration_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_registration_fragment" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>