<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="accountViewModel"
            type="com.foody.foody.ui.account.AccountViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_welcome_fragment"
        android:fillViewport="true"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="16dp"
                android:src="@drawable/main_image_login_fragment"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    android:id="@+id/textView"
                    style="@style/main_title_login_registration_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_title_account_fragment" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_edit_login_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_title_account_fragment" />

                    <TextView
                        android:id="@+id/name_account_fragment"
                        style="@style/info_account_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_text" />

                    <TextView
                        style="@style/text_edit_login_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title_account_fragment" />

                    <TextView
                        android:id="@+id/email_account_fragment"
                        style="@style/info_account_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_text" />

                </LinearLayout>

                <Button
                    android:id="@+id/main_button_account_fragment"
                    style="@style/main_button_login_registration_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{()-> accountViewModel.onLogoutClicked()}"
                    android:text="@string/main_button_account_fragment" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>